--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -9,46 +9,60 @@
   },
   
   "agents": {
-  "test_agent": {
-    "provider": "gemini",
-    "model_name": "models/gemini-2.0-flash",
-    "temperature": 0,
-    "max_tokens": 4096,
-    "api_key_env": "GEMINI_API_KEY"
-  },
-  "gemini-2.5-pro-exp-03-25": {
-    "provider": "gemini",
-    "model_name": "models/gemini-2.5-pro-exp-03-25",
-    "temperature": 0,
-    "max_tokens": 4096,
-    "api_key_env": "GEMINI_API_KEY"
-  },
-  "gemini-2.0-flash": {
-    "provider": "gemini",
-    "model_name": "models/gemini-2.0-flash",
-    "temperature": 0,
-    "max_tokens": 4096,
-    "api_key_env": "GEMINI_API_KEY"
-  },
-  "telegram_collector": {
-    "provider": "gemini",
-    "model_name": "models/gemini-2.0-flash",
-    "temperature": 0,
-    "max_tokens": 4096,
-    "api_key_env": "GEMINI_API_KEY"
-  },
-	"question_analyzer_agent": {
+    "test_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 100000,
+      "max_tokens": 8192,
       "api_key_env": "GEMINI_API_KEY"
     },
-	"orchestrator_agent": {
+    "gemini-2.5-pro-exp-03-25": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.5-pro-exp-03-25",
+      "temperature": 0,
+      "max_tokens": 60000,
+      "api_key_env": "GEMINI_API_KEY"
+    },
+    "gemini-2.0-flash-lite": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash-lite",
+      "temperature": 0,
+      "max_tokens": 8192,
+      "api_key_env": "GEMINI_API_KEY"
+    },
+    "gemini-2.0-flash": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 100000,
+      "max_tokens": 8192,
+      "api_key_env": "GEMINI_API_KEY"
+    },
+    "telegram_collector": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
+      "temperature": 0,
+      "max_tokens": 8192,
+      "api_key_env": "GEMINI_API_KEY"
+    },
+    "question_analyzer_agent": {
+        "provider": "gemini",
+        "model_name": "models/gemini-2.0-flash",
+        "temperature": 0,
+        "max_tokens": 100000,
+        "api_key_env": "GEMINI_API_KEY"
+    },
+    "orchestrator_agent": {
+        "provider": "gemini",
+        "model_name": "models/gemini-2.0-flash",
+        "temperature": 0,
+        "max_tokens": 100000,
+        "api_key_env": "GEMINI_API_KEY"
+    },
+    "context_response_agent": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash-lite",
+      "temperature": 0,
+      "max_tokens": 8192,
       "api_key_env": "GEMINI_API_KEY"
     },
     "report_analyzer_agent": {
@@ -98,8 +112,8 @@
     "response_formatter_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
-      "temperature": 0.1,
-      "max_tokens": 100000,
+      "temperature": 0.0,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "fallback_manager_agent": {
