--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.460.0",
     "next": "latest",
     "next-themes": "^0.4.4",
+    "nookies": "^2.5.2",
     "react": "latest",
     "react-dom": "latest",
     "react-dropzone": "^14.3.5",
