--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
     "node-html-parser": "^7.0.1",
+    "nookies": "^2.5.2",
     "papaparse": "^5.5.2",
     "plotly.js": "^3.0.1",
     "react": "^18.3.1",
