--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "dom-to-image-more": "^3.5.0",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.460.0",
     "next": "latest",
     "next-themes": "^0.4.4",
