--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@radix-ui/react-toggle-group": "^1.0.4",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.8",
