--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -61,6 +61,7 @@ google-api-core==2.24.1
 google-api-python-client==2.160.0
 google-auth==2.38.0
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
 google-cloud-aiplatform==1.79.0
 google-cloud-bigquery==3.29.0
 google-cloud-core==2.4.1
@@ -74,6 +75,7 @@ greenlet==3.1.1
 grpc-google-iam-v1==0.14.0
 grpcio==1.70.0
 grpcio-status==1.70.0
+gspread==6.2.0
 h11==0.14.0
 html5lib==1.1
 httpcore==1.0.7
@@ -116,6 +118,7 @@ langgraph-cli==0.1.77
 langgraph-prebuilt==0.1.3
 langgraph-sdk==0.1.57
 langsmith==0.3.11
+linkify-it-py==2.0.3
 llama-cloud==0.1.11
 llama-index==0.12.19
 llama-index-agent-openai==0.4.3
@@ -139,6 +142,7 @@ MarkupSafe==3.0.2
 marshmallow==3.26.0
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.2
 mdurl==0.1.2
 mistune==3.1.2
 mpmath==1.3.0
@@ -166,6 +170,7 @@ nvidia-cusparselt-cu12==0.6.2
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
 nvidia-nvtx-cu12==12.4.127
+oauthlib==3.2.2
 openai==1.61.0
 orjson==3.10.15
 packaging==24.2
@@ -223,7 +228,9 @@ rank-bm25==0.2.2
 redis==5.2.1
 referencing==0.36.2
 regex==2024.11.6
+reportlab==4.3.1
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 responses==0.18.0
 rich==13.9.4
@@ -261,6 +268,7 @@ triton==3.2.0
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2025.1
+uc-micro-py==1.0.3
 uritemplate==4.1.1
 urllib3==2.3.0
 uv==0.6.3
@@ -276,4 +284,3 @@ xxhash==3.5.0
 yarg==0.1.9
 yarl==1.18.3
 zstandard==0.23.0
-gspread==6.2.0
