--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
-aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
+aiohappyeyeballs==2.6.1
+aiohttp==3.10.11
 aiosignal==1.3.2
 alembic==1.14.1
 amqp==5.3.1
@@ -9,7 +9,7 @@ anyio==4.8.0
 appdirs==1.4.4
 asttokens==3.0.0
 asyncpg==0.30.0
-attrs==25.1.0
+attrs==25.3.0
 backcall==0.2.0
 bcrypt==4.3.0
 beautifulsoup4==4.13.1
@@ -18,7 +18,7 @@ bleach==6.2.0
 bm25s==0.2.7.post1
 cachetools==5.5.1
 celery==5.4.0
-certifi==2024.12.14
+certifi==2025.4.26
 cffi==1.17.1
 chardet==5.2.0
 charset-normalizer==3.4.1
@@ -53,7 +53,7 @@ filetype==1.2.0
 fireworks-ai==0.15.12
 flower==2.0.1
 fonttools==4.56.0
-frozenlist==1.5.0
+frozenlist==1.6.0
 fsspec==2025.3.0
 git-filter-repo==2.47.0
 google-ai-generativelanguage==0.6.15
@@ -70,10 +70,10 @@ google-cloud-storage==2.19.0
 google-crc32c==1.6.0
 google-generativeai==0.8.4
 google-resumable-media==2.7.2
-googleapis-common-protos==1.66.0
+googleapis-common-protos==1.70.0
 greenlet==3.1.1
 grpc-google-iam-v1==0.14.0
-grpcio==1.70.0
+grpcio==1.71.0
 grpcio-status==1.70.0
 gspread==6.2.0
 h11==0.14.0
@@ -105,11 +105,13 @@ kombu==5.4.2
 langchain==0.3.17
 langchain-anthropic==0.3.10
 langchain-community==0.3.16
-langchain-core==0.3.45
+langchain-core==0.3.58
 langchain-fireworks==0.2.7
 langchain-google-genai==2.0.9
 langchain-google-vertexai==2.0.12
 langchain-openai==0.3.7
+langchain-pinecone==0.2.5
+langchain-tests==0.3.19
 langchain-text-splitters==0.3.5
 langgraph==0.3.11
 langgraph-api==0.0.30
@@ -118,23 +120,9 @@ langgraph-cli==0.1.77
 langgraph-prebuilt==0.1.3
 langgraph-sdk==0.1.57
 langsmith==0.3.11
-llama-cloud==0.1.11
-llama-index==0.12.19
-llama-index-agent-openai==0.4.3
-llama-index-cli==0.4.0
-llama-index-core==0.12.19
-llama-index-embeddings-openai==0.3.1
-llama-index-indices-managed-llama-cloud==0.6.4
-llama-index-llms-openai==0.3.16
-llama-index-multi-modal-llms-openai==0.4.3
-llama-index-program-openai==0.3.1
-llama-index-question-gen-openai==0.3.0
-llama-index-readers-file==0.4.4
-llama-index-readers-llama-parse==0.4.0
-llama-index-retrievers-bm25==0.5.2
-llama-parse==0.5.20
 loguru==0.7.3
 lxml==5.3.2
+lz4==4.4.4
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
@@ -145,7 +133,7 @@ mdurl==0.1.2
 mistune==3.1.2
 mpmath==1.3.0
 msgpack==1.1.0
-multidict==6.1.0
+multidict==6.4.3
 multiprocess==0.70.16
 mypy-extensions==1.0.0
 nbclient==0.10.2
@@ -181,9 +169,8 @@ pdfplumber==0.11.6
 pexpect==4.9.0
 pickleshare==0.7.5
 pillow==11.1.0
-pinecone==5.4.2
+pinecone==6.0.2
 pinecone-client==2.2.4
-pinecone-plugin-inference==3.1.0
 pinecone-plugin-interface==0.0.7
 pipdeptree==2.25.0
 pipreqs==0.5.0
@@ -191,9 +178,10 @@ platformdirs==4.3.6
 pluggy==1.5.0
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
-propcache==0.2.1
+propcache==0.3.1
 proto-plus==1.26.0
-protobuf==5.29.3
+protobuf==5.29.4
+protoc-gen-openapiv2==0.0.1
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
@@ -214,6 +202,7 @@ pypdfium2==4.30.1
 PyStemmer==2.2.0.3
 pytest==8.3.4
 pytest-asyncio==0.25.3
+pytest-socket==0.7.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-jose==3.3.0
@@ -248,6 +237,7 @@ starlette==0.45.3
 striprtf==0.0.26
 structlog==25.2.0
 sympy==1.13.1
+syrupy==4.9.1
 tavily-python==0.5.1
 Telethon==1.38.1
 tenacity==9.0.0
@@ -263,10 +253,10 @@ traitlets==5.14.3
 transformers==4.49.0
 triton==3.2.0
 typing-inspect==0.9.0
-typing_extensions==4.12.2
+typing_extensions==4.13.2
 tzdata==2025.1
 uritemplate==4.1.1
-urllib3==2.3.0
+urllib3==2.4.0
 uv==0.6.3
 uvicorn==0.34.0
 vine==5.1.0
@@ -278,5 +268,5 @@ wrapt==1.17.2
 wsproto==1.2.0
 xxhash==3.5.0
 yarg==0.1.9
-yarl==1.18.3
+yarl==1.20.0
 zstandard==0.23.0
