--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.10.11
+aiohttp==3.11.18
 aiosignal==1.3.2
 alembic==1.14.1
 amqp==5.3.1
@@ -102,7 +102,7 @@ jupyter_core==5.7.2
 jupyterlab_pygments==0.3.0
 kiwisolver==1.4.8
 kombu==5.4.2
-langchain==0.3.17
+langchain==0.3.25
 langchain-anthropic==0.3.10
 langchain-community==0.3.16
 langchain-core==0.3.58
@@ -111,8 +111,9 @@ langchain-google-genai==2.0.9
 langchain-google-vertexai==2.0.12
 langchain-openai==0.3.7
 langchain-pinecone==0.2.5
+langchain-tavily==0.1.6
 langchain-tests==0.3.19
-langchain-text-splitters==0.3.5
+langchain-text-splitters==0.3.8
 langgraph==0.3.11
 langgraph-api==0.0.30
 langgraph-checkpoint==2.0.20
@@ -135,6 +136,7 @@ mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.4.3
 multiprocess==0.70.16
+mypy==1.15.0
 mypy-extensions==1.0.0
 nbclient==0.10.2
 nbconvert==7.16.6
@@ -215,6 +217,7 @@ rank-bm25==0.2.2
 redis==5.2.1
 referencing==0.36.2
 regex==2024.11.6
+reportlab==4.4.0
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
