--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -58,6 +58,8 @@ services:
     image: redis:latest
     ports:
       - "127.0.0.1:6379:6379"
+    volumes:
+      - redis_data:/data
     networks:
       - app-network
 
