--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.6.1
-aiohttp>=3.10.0,<3.11.0
+aiohttp==3.10.11
 aiosignal==1.3.2
 alembic==1.14.1
 amqp==5.3.1
@@ -111,7 +111,6 @@ langchain-google-genai==2.0.9
 langchain-google-vertexai==2.0.12
 langchain-openai==0.3.7
 langchain-pinecone==0.2.6
-# langchain-tavily==0.1.6
 langchain-tests==0.3.19
 langchain-text-splitters==0.3.8
 langgraph==0.3.11
@@ -169,6 +168,7 @@ passlib==1.7.4
 pdfminer.six==20250327
 pdfplumber==0.11.6
 pexpect==4.9.0
+pgvector==0.4.1
 pickleshare==0.7.5
 pillow==11.1.0
 pinecone==6.0.2
